--- a/examples/streaming-service/package.json
+++ b/examples/streaming-service/package.json
@@ -8,5 +8,17 @@
     "dev:client": "vite --config vite.config.js",
     "build": "npm-run-all build:*",
     "build:client": "vite build"
+  },
+  "dependencies": {
+    "@tinyhttp/app": "^2.2.3",
+    "@tinyhttp/logger": "^2.0.0",
+    "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "liquidjs": "^10.10.2",
+    "nodemon": "^3.1.0",
+    "npm-run-all": "^4.1.5",
+    "sirv": "^2.0.4",
+    "vite": "^5.2.6",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
